--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
  <dd class=yp-summary-list__actions><dt class=yp-summary-list__key>Individual's name</dt>
  <dd class=yp-summary-list__value>GIRGIS SEDHOM GIRGIS SHAKER</dd>
  <dd class=yp-summary-list__actions><dt class=yp-summary-list__key>Project title</dt>
- <dd class=yp-summary-list__value>The Importance of Participation in the Energy Sector for Achieving Sustainable Development"</dd>
+ <dd class=yp-summary-list__value>European Models of Nursing Leadership and Care Delivery"</dd>
  <dd class=yp-summary-list__actions><dt class=yp-summary-list__key>Dates</dt>
  <dd class=yp-summary-list__value>01/03/2024 – 06/03/2024</dd>
  <dd class=yp-summary-list__actions><dt class=yp-summary-list__key>Activity types</dt>
